# Story-Maker

backend/: .dockerignore  .gitignore  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
backend/app/: settings.py
backend/app/api/routers/: chat.py
backend/app/engine/: __init__.py  generate.py  index.py  notes.py
backend/config/: tools.yaml
backend/tests/: file_upload.py  truelens.py
frontend/: package.json
frontend-main/: package.json  styles.js  theme.js
frontend-main/pages/: _app.js  document.js  index.js
